feat: Implement home and add product features with initial localization support.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,6 @@
 {
     "@@locale": "ar",
+    "viewAll": "عرض الكل",
     "appTitle": "ماركت فلو",
     "slogan": "مستقبل التجارة والإبتكار",
     "welcomeBack": "أهلاً بك مجدداً!",
@@ -138,5 +139,6 @@
                 "type": "String"
             }
         }
-    }
+    },
+    "searchProducts": "البحث عن المنتجات..."
 }
